@@ -18,6 +18,7 @@ import android.view.View;
 import android.view.ViewGroup;
 import android.widget.AdapterView;
 import android.widget.LinearLayout;
+import android.widget.TimePicker;
 import android.widget.Toast;
 
 import androidx.annotation.NonNull;
@@ -42,6 +43,7 @@ import com.fazziclay.opentoday.app.items.item.Item;
 import com.fazziclay.opentoday.app.items.item.ItemsRegistry;
 import com.fazziclay.opentoday.app.items.item.LongTextItem;
 import com.fazziclay.opentoday.app.items.item.MathGameItem;
+import com.fazziclay.opentoday.app.items.item.SleepTimeItem;
 import com.fazziclay.opentoday.app.items.item.TextItem;
 import com.fazziclay.opentoday.app.items.notification.DayItemNotification;
 import com.fazziclay.opentoday.app.items.notification.ItemNotification;
@@ -72,6 +74,7 @@ import com.fazziclay.opentoday.util.MinTextWatcher;
 import com.fazziclay.opentoday.util.ResUtil;
 import com.fazziclay.opentoday.util.SimpleSpinnerAdapter;
 import com.fazziclay.opentoday.util.time.ConvertMode;
+import com.fazziclay.opentoday.util.time.HumanTimeType;
 import com.fazziclay.opentoday.util.time.TimeUtil;
 
 import java.text.SimpleDateFormat;
@@ -237,6 +240,9 @@ public class ItemEditorFragment extends Fragment implements BackStackMember {
         }
         if (item instanceof MathGameItem) {
             binding.modules.addView(addEditModule(new MathGameItemEditModule()));
+        }
+        if (item instanceof SleepTimeItem) {
+            binding.modules.addView(addEditModule(new SleepTimeItemEditModule()));
         }
 
         UI.getUIRoot(this).pushActivitySettings(a -> {
@@ -1069,6 +1075,47 @@ public class ItemEditorFragment extends Fragment implements BackStackMember {
         @Override
         public void setOnStartEditListener(Runnable o) {
             this.onEditStart = o;
+        }
+    }
+
+    private class SleepTimeItemEditModule extends BaseEditUiModule {
+        private LinearLayout layout;
+        private TimePicker wakeUpTime;
+        private TimePicker requiredSleepTime;
+
+        @Override
+        public View getView() {
+            return layout;
+        }
+
+        @Override
+        public void setup(Item item, Activity activity, View view) {
+            SleepTimeItem sleepTimeItem = (SleepTimeItem) item;
+
+            layout = new LinearLayout(activity);
+            layout.setOrientation(LinearLayout.VERTICAL);
+
+            this.wakeUpTime = new TimePicker(activity);
+            wakeUpTime.setMinute(TimeUtil.getHumanValue(sleepTimeItem.getWakeUpTime(), HumanTimeType.MINUTE_OF_HOUR));
+            wakeUpTime.setHour(TimeUtil.getHumanValue(sleepTimeItem.getWakeUpTime(), HumanTimeType.HOUR));
+            layout.addView(wakeUpTime);
+
+            this.requiredSleepTime = new TimePicker(activity);
+            requiredSleepTime.setMinute(TimeUtil.getHumanValue(sleepTimeItem.getRequiredSleepTime(), HumanTimeType.MINUTE_OF_HOUR));
+            requiredSleepTime.setHour(TimeUtil.getHumanValue(sleepTimeItem.getRequiredSleepTime(), HumanTimeType.HOUR));
+            layout.addView(requiredSleepTime);
+        }
+
+        @Override
+        public void commit(Item item) throws Exception {
+            SleepTimeItem sleepTimeItem = (SleepTimeItem) item;
+            sleepTimeItem.setWakeUpTime(wakeUpTime.getMinute() * TimeUtil.SECONDS_IN_MINUTE + wakeUpTime.getHour() * TimeUtil.SECONDS_IN_HOUR);
+            sleepTimeItem.setRequiredSleepTime(requiredSleepTime.getMinute() * TimeUtil.SECONDS_IN_MINUTE + requiredSleepTime.getHour() * TimeUtil.SECONDS_IN_HOUR);
+        }
+
+        @Override
+        public void setOnStartEditListener(Runnable o) {
+
         }
     }
 }
