@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:backgroundTint="?attr/item_text_background_color"
+    android:background="@drawable/shape"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="Simple text"
+        android:textSize="19sp"
+        android:textColor="?attr/item_text_textColor"
+        android:paddingLeft="5sp" />
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="Simple text"
+        android:textSize="17sp"
+        android:textColor="?attr/item_text_textColor"
+        android:paddingLeft="3sp" />
+
+</LinearLayout>
